# tm-manager

./: .gitignore  CHANGELOG.md  README.md  po4a.cfg  pyproject.toml
.github/workflows/: build-rpm.yml  release.yml  rpm-build.yml
.tx/: config
build-new/tm-manager_0.2.1_all/DEBIAN/: control
build-new/tm-manager_0.2.1_all/usr/lib/python3/dist-packages/tm_manager/: main.py  tmx.py
build-new/tm-manager_0.2.2_all/DEBIAN/: control
build-new/tm-manager_0.2.2_all/usr/share/applications/: se.danielnylander.TMManager.desktop
build-new/tm-manager_0.2.2_all/usr/share/locale/sv/LC_MESSAGES/: tm-manager.mo
data/: se.danielnylander.TMManager.desktop  se.danielnylander.TMManager.desktop.in
data/man/: tm-manager.1
po/: README.md  sv.mo  sv.po  tm-manager.pot
po/locale/sv/LC_MESSAGES/: tm-manager.mo
po/man/: sv.po  tm-manager.1.pot
po/sv/LC_MESSAGES/: tm-manager.mo
src/tm_manager/: __init__.py  __init__.py.bak  main.py
